--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -27,13 +27,25 @@
 		a {
 			cursor: pointer;
 			padding: 0.5em 1em;
-			background-color: #40b208;
+			margin-right: 0.5em;
+			// background-color: #40b208;
+			background-color: #328c06;
 			border: 1px solid rgba(255,255,255,0.3);
 			color: #fff;
 			text-decoration: none;
 			transition: all 0.2s ease;
 			&:hover {
-				background-color: rgba(64,178,8,0.4);
+				// background-color: rgba(64,178,8,0.4);
+				background-color: #5cff0a;
+				color: #1d5203;
+			}
+		}
+		a.pnd {
+			background-color: #757575;
+			color: #fff;
+			&:hover {
+				background-color: #eaeaea;
+				color: #313131;
 			}
 		}
 		a.bkpg {
