--- a/components/sass/_msg-one.scss
+++ b/components/sass/_msg-one.scss
@@ -46,7 +46,8 @@ a#gmaps {
 #pdf-upload,
 #link-label,
 #role-key,
-#why-join {
+#why-join,
+#mb-notes {
   cursor: pointer;
   position: relative;
   width: 100%;
