--- a/components/sass/_email-host-modal.scss
+++ b/components/sass/_email-host-modal.scss
@@ -33,6 +33,7 @@ body.noscrollz {
 /* The Close Button */
 .closefp {
   color: #313131;
+  color: #cd3333;
   float: right;
   margin-top: -0.2em;
   font-size: 1.5em;
