--- a/style-expanded.css
+++ b/style-expanded.css
@@ -847,6 +847,7 @@ p.no-mtgs {
       align-self: flex-start;
   width: 50%;
   padding: 1em;
+  margin-top: 1em;
   border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
 .weekday-wrap .meeting-details .details-left > p.phone-num01 {
@@ -958,27 +959,58 @@ p.no-mtgs {
 }
 
 .email-host {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
   width: 100%;
-  display: block;
-  padding: 1em;
+  font-size: 0.8em;
 }
 .email-host a {
-  margin-left: 0;
-  color: #fff;
-  text-decoration: none;
-  line-height: 1.2em;
   cursor: pointer;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 50%;
+  max-width: 200px;
+  padding: 0.5em 1em;
+  background-color: #757575;
+  color: #fff;
+  border: 1px solid #ccc;
   transition: all 0.2s ease;
 }
-.email-host a:hover {
-  color: #96ff00;
-}
-.email-host i.far.fa-envelope {
-  position: relative;
+.email-host a:first-of-type {
   margin-right: 0.5em;
-  float: left;
-  margin-bottom: 1em;
+}
+.email-host a:hover {
+  background-color: #313131;
+}
+.email-host a i {
+  margin-right: 0.5em;
+}
+
+.issue-header {
+  border: 1px solid #ff9f9f;
+  background-color: #dddddd;
+  color: #313131;
+  font-size: 0.8em;
+  padding: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   line-height: 1.2em;
+  text-align: justify;
+}
+
+.log-issue-public {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  width: 100%;
+  line-height: 1.5em;
 }
 
 @media screen and (max-width: 800px) {
@@ -1013,6 +1045,7 @@ p.no-mtgs {
   .weekday-wrap .meeting-details .details-right {
     width: 100%;
     padding: 0em;
+    margin-top: 1em;
   }
   .weekday-wrap .meeting-details .details-left {
     border-right: none;
@@ -3832,6 +3865,7 @@ body.noscrollz {
 }
 #theModal .closefp {
   color: #313131;
+  color: #cd3333;
   float: right;
   margin-top: -0.2em;
   font-size: 1.5em;
