--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -375,7 +375,7 @@ p.no-mtgs {
 		align-items: center;
 		width: 50%;
 		max-width: 200px;
-		padding: 0.5em 1em;
+		padding: 0.75em 1em;
 		background-color: #757575;
 		color: #fff;
 		border: 1px solid #ccc;
@@ -389,6 +389,13 @@ p.no-mtgs {
 		i {
 			margin-right: 0.5em;
 		}
+	}
+}
+.email-host.admin-links {
+	a {
+		max-width: 50%;
+		word-wrap: break-word;
+		word-break: break-word;
 	}
 }
 .issue-header {
@@ -408,13 +415,18 @@ p.no-mtgs {
 	width: 100%;
 	line-height: 1.5em;
 
-
-
-
-
-
-
-
+}
+.errors-reported {
+	display: flex;
+	width: 100%;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+	border: 1px solid #f23a3a;
+	background-color: #ffc0c0;
+	color: #5e0000;
+	font-size: 0.8em;
+	line-height: 1.5em;
+	padding: 1em;
 }
 
 
