I think it's working like a champ

--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -390,6 +390,12 @@ p.no-mtgs {
 			margin-right: 0.5em;
 		}
 	}
+	a i.fa-exclamation-triangle {
+		color: #ffa500;
+	}
+	a i.fa-envelope {
+		color: #d6b385;
+	}
 }
 .email-host.admin-links {
 	a {
