--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -54,6 +54,10 @@
 				background-color: rgba(255,255,255,0.2);
 			}
 		}
+		a.bkpg:hover,
+		a.bkpg:hover i.fa-backward {
+			color: #fff;
+		}
 	}
 }
 .post-deleted {
