--- a/style-expanded.css
+++ b/style-expanded.css
@@ -4822,6 +4822,10 @@ li.focus a:hover {
 #mb-wrap .new-topic a.bkpg:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
+#mb-wrap .new-topic a.bkpg:hover,
+#mb-wrap .new-topic a.bkpg:hover i.fa-backward {
+  color: #fff;
+}
 
 .post-deleted {
   display: -ms-flexbox;
