added issue description to manage_edit.php page
this way the Host can see what people posted as their issue.

--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -119,6 +119,19 @@
 		}
 	}
 }
+p.address-this {
+	line-height: 1.5em;
+	margin-bottom: 1em;
+	color: #ffc2c2;
+}
+p.display-issues {
+	border: 1px solid #cc0000;
+	background-color: #ffc6c6;
+  color: #c72222;
+  line-height: 1.5em;
+  padding: 1em;
+  margin-bottom: 0.5em;
+}
 .manage-simple-admin {
 	width: 100%;
 	max-width: 900px;
