fixed line-height on message board for mobile

--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -301,6 +301,7 @@ p.mb-body {
 	margin-top: 0.8em;
 	margin-left: 1em;
 	padding-bottom: 1em;
+	line-height: 1.5em;
 }
 a.mb-entire p.mb-body {
 	padding-bottom: 0em;
