--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -334,7 +334,8 @@ li.focus a:hover {
 #transfer-form-topz,
 #user-list,
 #user-listz,
-#user-listzz {
+#user-listzz,
+#weekdays {
 	display: flex;
 	align-items: center;
 	.mng-usr,
