--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -559,6 +559,9 @@ a.manage-delete {
 		margin-top: 1em;
 		position: relative;
 		width: 98%;
+		p.mtg-tz {
+			width: 100%;
+		}
 		i.far.fa-edit {
 			position: absolute;
 			top: 5px;
