--- a/style-expanded.css
+++ b/style-expanded.css
@@ -224,7 +224,7 @@ html {
 .set-tz .tz-box .tz-content {
   width: 100%;
   padding: 1em;
-  background-color: rgba(44, 62, 95, 0.9);
+  background-color: #2c3e5f;
   color: #fff;
   border-bottom-right-radius: 8px;
   border-bottom-left-radius: 8px;
@@ -258,7 +258,9 @@ html {
 .set-tz .tz-box .tz-content form select.pick-tz option:hover {
   cursor: pointer;
 }
-.set-tz .tz-box .tz-content form input {
+.set-tz .tz-box .tz-content form input,
+.set-tz .tz-box .tz-content form a.btn {
+  text-align: center;
   margin-top: 1em;
   -webkit-appearance: none;
   border: 1px solid rgba(255, 255, 255, 0.9);
@@ -269,14 +271,16 @@ html {
   color: #fff;
   transition: all 0.2s ease;
 }
-.set-tz .tz-box .tz-content form input:hover {
+.set-tz .tz-box .tz-content form input:hover,
+.set-tz .tz-box .tz-content form a.btn:hover {
   background-color: #1b9a0a;
 }
-.set-tz .tz-box .tz-content form input#hide-tz {
+.set-tz .tz-box .tz-content form a#hide-tz {
+  text-align: center;
   margin-top: 0.5em;
   background-color: #313131;
 }
-.set-tz .tz-box .tz-content form input#hide-tz:hover {
+.set-tz .tz-box .tz-content form a#hide-tz:hover {
   background-color: #757575;
 }
 
@@ -1046,6 +1050,25 @@ p.no-mtgs {
 }
 .collapse-btn:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+p.inline-tz {
+  margin-top: 1em;
+  font-size: 0.8em;
+  width: 100%;
+  max-width: 900px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+a.inline-show-tz {
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+a.inline-show-tz:hover {
+  color: orange;
 }
 
 .email-host {
@@ -3103,6 +3126,9 @@ a.manage-delete:hover {
   margin-top: 1em;
   position: relative;
   width: 98%;
+}
+.weekday-edit-wrap .meeting-details p.mtg-tz {
+  width: 100%;
 }
 .weekday-edit-wrap .meeting-details i.far.fa-edit {
   position: absolute;
