seems like it should be up to speed

--- a/components/sass/_preload.scss
+++ b/components/sass/_preload.scss
@@ -37,6 +37,7 @@
 .set-tz {
   background-color: rgba(0,0,0,0.8);
   font-family: Tahoma, Calbri, sans-serif;
+  z-index: 4567890;
   .tz-box {
     display: flex;
     flex-direction: column;
