--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -378,10 +378,18 @@ p.inline-tz {
 	text-align: left;
 	color: rgba(255,255,255,0.6);
 }
+p.mtg-tz {
+	color: #d2d2cf;
+	font-size: 0.8em;
+	margin-bottom: 1em;
+	background-color: rgba(255,255,255,0.1);
+	padding: 1em;
+}
 a.inline-show-tz {
 	cursor: pointer;
 	color: orange;
 	text-decoration: none;
+	// text-shadow: 0px 0px 5px #000;
 	transition: all 0.2s ease;
 	&:hover {
 		color: rgba(255,255,255,0.6);
