--- a/components/sass/_preload.scss
+++ b/components/sass/_preload.scss
@@ -75,6 +75,7 @@
           outline: none;
           cursor: pointer;
           background-color: #313131;
+          -webkit-appearance: none;
           color: #fff;
           option { 
             margin: 0 auto;
