daily-glance formatting details
put time & type on one line and title on another instead of all 3 on different lines. broke them up by order so that title would wrap to its own line.

--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -559,11 +559,14 @@ span[data-ampm='PM'] {
 			border-bottom: 1px solid rgba(255,255,255,0.2);
 		}
 	}
+
+
+
 	.daily-glance,
 	.manage-glance {
 		padding: 0.5em;
 		line-height: 1.4em;
-		flex-direction: column;
+		// flex-direction: column;
 		&:hover {
 			background-color: inherit;
 		}
