--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -14,9 +14,6 @@
 
 .manage-glance-user {
 	display: flex;
-	// 08.01.21
-	// flex-direction: column;
-	// end 08.01.21
 	justify-content: space-between;
 	cursor: pointer;
 	padding: 0.5em 1em;
@@ -42,8 +39,8 @@
 		line-height: 1.5em;
 	}
 	.glance-mtg-type {
-		padding: 0 1em;
-		text-align: right;
+		// padding: 0 1em;
+		// text-align: right;
 		p {
 			// display: flex;
 			width: 100%;
@@ -311,15 +308,6 @@ li.focus a:hover {
 
 
 
-
-
-
-
-
-
-
-
-
 .user-box #transfer-form-top,
 .user-box #transfer-form-topz {
 	display: flex;
@@ -400,4 +388,94 @@ li.focus a:hover {
 			justify-content: flex-end;
 		}
 	}
+}
+
+
+@media screen and (max-width: 800px) {
+	.backstretch {
+		display: none;
+	}
+	.background-image {
+		display: block;
+	}
+	.day {
+		font-size: 1.1em; 
+		&:hover {
+			background: none;
+			background-color: transparent;
+			color: #fff;
+		}
+	}
+	.active {
+		background: none;
+		// background-color: #fff;
+		background-color: rgba(255,255,255,0.2);
+		color: #fff;
+	}
+	// .weekday-wrap.note-here {
+	// 	border-bottom-left-radius: 0px;
+	// }
+	.weekday-wrap {
+		padding: 0px 10px 10px;
+	}
+	.weekday-wrap .meeting-details {
+		flex-direction: column;
+		.details-left,
+		.details-right {
+			width: 100%;
+			padding: 0em;
+			margin-top: 1em;
+		}
+		.details-left {
+			border-right: none;
+			border-bottom: 1px solid rgba(255,255,255,0.2);
+		}
+	}
+
+
+
+	.daily-glance,
+	.manage-glance {
+		padding: 0.5em;
+		line-height: 1.4em;
+		// flex-direction: column;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		&:hover {
+			background-color: inherit;
+		}
+		.glance-mtg-time {
+			order: 1;
+			width: 50%;
+			flex: auto;
+		}
+		.glance-group-title {
+			order: 3;
+			width: 100%;
+			flex: auto;
+			margin-top: 0.5em;
+			padding: 0em;
+		}
+		.glance-mtg-type {
+			justify-content: flex-end;
+			order: 2;
+			width: 50%;
+			flex: auto;
+			padding: 0em 0.5em 0em;
+		}
+
+	}
+
+
+	.day-content {
+		padding: 0.5em 0.5em 1.5em;
+	}
+	.daily-glance-wrap,
+	.manage-glance-wrap {
+		//background-color: rgba(45,74,107,0.7);
+		background-color: rgba(0,0,0,0.45);
+	}
+	// .manage-glance .glance-mtg-type {
+	// 	padding: 0px;
+	// }
 }
